# AGRI_ROBOT_2024

./: .gitignore  README.md  com.rules  test.py
src/: .rosinstall  .rosinstall.bak
src/Identification of drought conditions/: color_ranges.json  conditions.txt  hsv.py  script.py  test.py
src/auto_fsm/: CMakeLists.txt  default.rviz  package.xml
src/auto_fsm/launch/: greytest.launch  robotBringUp.launch  test.launch
src/auto_fsm/src/: auto_fsm.cpp  pid.cpp  pid.h
src/cross_detect/: CMakeLists.txt  package.xml
src/cross_detect/launch/: cross_detect.launch
src/cross_detect/src/: cross_detect.cpp
src/fdilink_ahrs/: CMakeLists.txt  wheeltec_udev.sh
src/fdilink_ahrs/launch/: ahrs_data.launch
src/fdilink_ahrs/src/: ahrs_driver.cpp  imu_tf.cpp
src/grayscale_sensor_reader/: CMakeLists.txt  package.xml
src/grayscale_sensor_reader/launch/: grayscale_data.launch
src/grayscale_sensor_reader/src/: grayscale_sensor_node.cpp
src/hipnuc_imu/config/: hipnuc_config.yaml
src/hipnuc_imu/launch/: imu_msg.launch
src/imu_translate/: CMakeLists.txt  package.xml
src/imu_translate/launch/: imu_translate_node.launch
src/imu_translate/src/: demo_yaw_publisher_node.cpp  heading_lock_node.cpp  imu_translate_node.cpp  pid.cpp  pid.h  rotate_90_degrees_node.cpp
src/serial_distance_reader/: CMakeLists.txt  package.xml
src/serial_distance_reader/launch/: distance_data.launch
src/serial_distance_reader/src/: distance_judge_node.cpp  serial_distance_reader_node.cpp
src/wlan_socket/: CMakeLists.txt  package.xml
src/wlan_socket/scripts/: main.py
src/yolo_detection/: CMakeLists.txt  capture.py  package.xml
src/yolo_detection/launch/: vase_detect.launch
src/yolo_detection/scripts/: vase_detect_yolo.py
